# tracker

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/adapter/: mod.rs  patcher.rs  reporter.rs  stream.rs  visualizer.rs  websocket.rs
src/domain/: error.rs  mod.rs  state.rs
src/port/: differ.rs  mod.rs  parser.rs  source.rs
src/service/: aligned.rs  mod.rs  tracker.rs
