[package]
name = "tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.28.0"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.48", features = ["derive"] }
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
console-subscriber = { version = "0.4.1", optional = true }
json-patch = "4.1.0"
serde_json_diff = "0.2.0"
owo-colors = "4.2.3"
rand = "0.9.2"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"

[profile.release]
lto = true
opt-level = 3
debug = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "pica"
path = "src/main.rs"